# StructRPC

./: .gitmodules  README.md
doc/: doc.md
trunk/: CMakeLists.txt  common_define.hpp  struct_rpc.hpp  tcp_connection.hpp  tcp_server.hpp
trunk/benchmark/: CMakeLists.txt  benchmark_async_client.cpp  benchmark_server.cpp  benchmark_sync_client.cpp  functions.hpp
trunk/client/: async_client.c
trunk/example/: CMakeLists.txt  async_client.cpp  example_server.cpp  functions.hpp  simple_client.cpp  simple_server.cpp  sync_client.cpp
trunk/generator/: generator.py
trunk/include/: client_base.h  client_base.hpp  common_define.hpp  data_struct_define.hpp  http_server.hpp  so_wrapper.h  tcp_client.hpp  tcp_connection.hpp  tcp_connection_bk.hpp  tcp_server.hpp  tcp_server_bk.hpp  types.hpp
trunk/logic/: TCPTestServer.hpp  so_wrapper.cpp  test_class.h  test_server.h  tuple_interface.h
trunk/src/: http_server.cpp  server.cpp
trunk/utils/: logger.hpp  timer.hpp  trait_helper.hpp  util.hpp
trunk/utils/trait_helper/: conditional_template.hpp  func_name.hpp  func_name_getter.hpp  func_traits.hpp  partial_apply.hpp  trait_helper.hpp  type_name_getter.hpp
